# flutter_gapless_loop

./: .pubignore  CHANGELOG.md  LICENSE  README.md  analysis_options.yaml  pubspec.yaml
android/: build.gradle.kts  settings.gradle
darwin/: Package.swift  flutter_gapless_loop.podspec
darwin/Classes/: FlutterGaplessLoopPlugin.swift  LoopAudioEngine.swift
doc/: ARCHITECTURE.md
doc/plans/: 2026-03-01-flutter-gapless-loop.md  2026-03-02-android-gapless-loop-design.md  2026-03-02-android-gapless-loop.md  2026-03-02-bpm-controls-and-panning-design.md  2026-03-02-bpm-controls-and-panning.md  2026-03-02-bpm-detection-design.md
docs/plans/: 2026-03-02-bpm-detection.md  2026-03-05-metronome-design.md  2026-03-05-metronome.md  2026-03-05-multi-instance-design.md  2026-03-05-url-bytes-loading-design.md  2026-03-05-url-bytes-loading.md  2026-03-06-metronome-master-design.md  2026-03-06-metronome-master.md
example/: README.md  pubspec.yaml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
ios/: flutter_gapless_loop.podspec
ios/Classes/: BpmDetector.swift  FlutterGaplessLoopPlugin.swift  (+3 more)
lib/: flutter_gapless_loop.dart  flutter_gapless_loop_method_channel.dart  flutter_gapless_loop_platform_interface.dart  flutter_gapless_loop_web.dart
linux/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  flutter_gapless_loop_plugin.cpp  loop_audio_engine.cpp  loop_audio_engine.h  metronome_engine.cpp  metronome_engine.h  miniaudio_impl.cpp
linux/include/flutter_gapless_loop/: flutter_gapless_loop_plugin.h
macos/: flutter_gapless_loop.podspec
test/: flutter_gapless_loop_method_channel_test.dart  flutter_gapless_loop_test.dart  load_from_url_bytes_test.dart  loop_audio_master_test.dart  metronome_master_test.dart  metronome_player_test.dart  multi_instance_test.dart  tier3_types_test.dart
windows/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  biquad_filter.h  bpm_detector.cpp  bpm_detector.h  crossfade_engine.h  flutter_gapless_loop_plugin.cpp  loop_audio_engine.cpp  loop_audio_engine.h  metronome_engine.cpp  metronome_engine.h
windows/include/flutter_gapless_loop/: flutter_gapless_loop_plugin.h
(+52 files in other folders)
